--- a/templates/modulos/clientes/index.html
+++ b/templates/modulos/clientes/index.html
@@ -16,17 +16,20 @@
             </tr>
         </thead>
         <tbody>
-            
+            {%for cliente in clientes%}
             <tr class="">
-                <td scope="row">Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
+                <td scope="row">{{cliente[0]}}</td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td>
-                    <a href="" class="btn btn-success">editar</a>
+                    <a href="" class="btn btn-success">editar
+                        <i class="fa-solid fa-paintbrush"></i>
+                    </a>
                     <a href="" class="btn btn-danger">eliminar</a>
                 </td>
             </tr>
+            {%endfor%}
         </tbody>
     </table>
 </div>
