Vistas creadas de edit/delete

--- a/templates/modulos/clientes/index.html
+++ b/templates/modulos/clientes/index.html
@@ -2,7 +2,7 @@
 {%include 'header.html'%}
 <h3 class="text-center">LISTA DE CLIENTES</h3>
 <div class="text-center">
-    <a href="" class="btn btn-primary">Nuevo</a>
+    <a href="/cliente/create" class="btn btn-primary">Nuevo</a>
 </div>
 <div class="table-responsive">
     <table class="table"><br>
@@ -18,15 +18,15 @@
         <tbody>
             {%for cliente in clientes%}
             <tr class="">
-                <td scope="row">{{cliente[0]}}</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td scope="row">{{loop.index}}</td>
+                <td>{{cliente['nombre']}}</td>
+                <td>{{cliente['telefono']}}</td>
+                <td>{{cliente['fecha']}}</td>
                 <td>
-                    <a href="" class="btn btn-success">editar
+                    <a href="/clientes/edit/{{cliente['id']}}" class="btn btn-success">editar
                         <i class="fa-solid fa-paintbrush"></i>
                     </a>
-                    <a href="" class="btn btn-danger">eliminar</a>
+                    <a href="/clientes/borrar/{{cliente['id']}}" class="btn btn-danger">eliminar</a>
                 </td>
             </tr>
             {%endfor%}
